# shelly_plug

./: CMakeLists.txt  README.md  idf_component.yml  shelly_plug.cpp
examples/shelly_plug_example/: CMakeLists.txt  README.md
examples/shelly_plug_example/components/sachin42__httpclient/: idf_component.yml
examples/shelly_plug_example/main/: CMakeLists.txt  idf_component.yml  main.cpp
include/: shelly_plug.hpp
